tests/baselines/reference/unusedTypeParameterInLambda2.errors.txt
unusedTypeParameterInLambda2.ts(3,17): error TS6133: 'T' is declared but its value is never read.


==== unusedTypeParameterInLambda2.ts (1 errors) ====
    class A {
        public f1() {
            return <T, X>() => {
                    ~
!!! error TS6133: 'T' is declared but its value is never read.
                var a: X;
                a;
            }
        }
    }